--- a/chua.html
+++ b/chua.html
@@ -2,19 +2,55 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>San Joaquin Valley Town Hall</title>
-	<link rel="icon" href="../images/favicon.ico">
-	<link rel="stylesheet" href="../styles/main.css">
+    <meta charset="utf-8">
+    <title>San Joaquin Valley Town Hall - Amy Chua</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
-	<main>
-		<section>
-			<h1>Amy Chua</h1>
-			<h2>This page is under construction.</h2>
-		</section>
-	</main>
-</body>
+    <header>
+        <img src="../images/town_hall_logo.gif" alt="Town Hall logo">
+        <h2>San Joaquin Valley Town Hall</h2>
+        <h3>Celebrating our <span class="large">75<sup>th</sup></span> Year</h3>
+    </header>
 
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar">
+        <ul class="menu">
+            <li><a href="../index.html">Home</a></li>
+            <li class="has-submenu">
+                <a href="#">Speakers <small>▼</small></a>
+                <ul class="submenu">
+                    <li><a href="brancaccio.html">David Brancaccio</a></li>
+                    <li><a href="sorkin.html">Andrew Ross Sorkin</a></li>
+                    <li><a href="chua.html">Amy Chua</a></li>
+                    <li><a href="sampson.html">Scott Sampson</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Luncheons</a></li>
+            <li><a href="#">Tickets</a></li>
+            <li class="has-submenu">
+                <a href="#">About Us <small>▼</small></a>
+                <ul class="submenu">
+                    <li><a href="#">Mission</a></li>
+                    <li><a href="#">Board</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+
+    <main>
+        <section class="speaker">
+            <h1>Amy Chua</h1>
+            <h2>This page is under construction.</h2>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Henessey Villa. Assignment A09 Due: Nov 21, 2025</p>
+    </footer>
+</body>
 </html>
